<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/text_desc_fg_desc"
            android:paddingHorizontal="@dimen/space_large"
            android:gravity="center"
            tools:text="@string/desc_basic_audio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_fg_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <View
            android:id="@+id/divider_fg_desc"
            android:background="?attr/colorSurface"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:layout_height="1dp"/>

    <LinearLayout
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="64dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_scene_fg_desc"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:boxBackgroundMode="filled"
                app:hintEnabled="false"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                android:padding="@dimen/space_medium"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_scene_fg_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="14sp"
                    android:hint="@string/scene_name"
                    android:paddingVertical="8dp"
                    android:inputType="text"
                    tools:text="@string/speaker"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_join_fg_desc"
                android:textAllCaps="false"
                android:text="@string/btn_join"
                android:minWidth="0dp"
                android:letterSpacing="0"
                android:textColor="?attr/colorOnPrimary"
                app:backgroundTint="?attr/colorPrimary"
                android:layout_marginEnd="@dimen/space_medium"
                android:layout_marginRight="@dimen/space_medium"
                android:layout_gravity="end|center_vertical"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>