<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tool_bar_main"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/nav_icon_main"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:padding="@dimen/space_medium"
                android:stateListAnimator="@animator/scale_on_touch"
                app:tint="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/btn_icon_back"
                tools:targetApi="lollipop"/>

        <TextView
                android:id="@+id/text_title_main"
                android:layout_gravity="center"
                tools:text="@string/app_name"
                android:gravity="center_vertical"
                android:textColor="?android:attr/textColorPrimary"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"/>
    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/container_np_api"
            app:navGraph="@navigation/nav_ng_api"
            app:defaultNavHost="true"
            app:layout_constraintTop_toBottomOf="@id/tool_bar_main"
            app:layout_constraintBottom_toBottomOf="parent"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <!-- A scrim that appears when the FAB is expanded. -->
    <View
            android:id="@+id/scrim_main"
            android:alpha="0"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/scrimBackground"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/t_fab_main"
            android:layout_margin="@dimen/space_medium"
            app:tint="?attr/colorOnPrimary"
            android:src="@drawable/ic_setting_white"
            android:contentDescription="@string/mute"
            app:rippleColor="@android:color/transparent"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="@dimen/space_medium"
            android:layout_marginHorizontal="@dimen/space_medium"
            app:contentPadding="@dimen/space_large"
            android:focusable="true"
            android:clickable="true"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardView">

        <include
                android:id="@+id/section_audio_main"
                layout="@layout/section_audio"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>